# src/swagger/swagger.json
@@ -6,7 +6,7 @@
     "version": "1.1.0"
   },
   "host": "localhost:3000",
-  "basePath": "/api/v1/users/",
+  "basePath": "/api/v1/",
   "schemes": [
     "http"
   ],
@@ -17,7 +17,7 @@
     "application/json"
   ],
   "paths": {
-    "/register": {
+    "/users/register": {
       "post": {
         "tags": [
           ""
@@ -41,180 +41,340 @@
           "200": {
             "description": "OK"
           },
-          "500":{
-            "description":"Internal server error"
+          "500": {
+            "description": "Internal server error"
           }
         }
       }
     },
-  
-  "/login": {
-    "post": {
-      "tags": [
-        ""
-      ],
-      "summary": "Login a user.",
-      "description": "Log in  user",
-      "parameters": [
-        {
-          "in": "body",
-          "name": "Log in Data",
-          "required": false,
-          "schema": {
-            "$ref": "#/definitions/UserLogin"
+    "/users/login": {
+      "post": {
+        "tags": [
+          ""
+        ],
+        "summary": "Login a user.",
+        "description": "Log in  user",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "Log in Data",
+            "required": false,
+            "schema": {
+              "$ref": "#/definitions/UserLogin"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal server error"
           }
         }
-      ],
-      "produces": [
-        "application/json"
-      ],
-      "responses": {
-        "200": {
-          "description": "OK"
-        },
-        "500":{
-          "description":"Internal server error"
+      }
+    },
+    "/users/forgetpassword": {
+      "post": {
+        "tags": [
+          ""
+        ],
+        "summary": "forget password",
+        "description": "to reset new password user need to forget password first",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "Forget Password",
+            "required": false,
+            "schema": {
+              "$ref": "#/definitions/ForgetPassword"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
         }
       }
-    }
-  },
+    },
+    "/users/resetpassword": {
+      "put": {
+        "tags": [
+          ""
+        ],
+        "summary": "Reset a user.",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "Reset Data",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ResetPassword"
+            }
+          },
+          {
+            "in": "header",
+            "name": "token",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ResetPassword"
+            }
+          }
+        ],
+        "description": "Reset password",
+        "produces": "application/json",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/notes/": {
+      "post": {
+        "tags": [
+          ""
+        ],
+        "summary": "Add a note.",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "addNotes Data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "userId",
+                "userEmail",
+                "title",
+                "description",
+                "color",
+                "isArchived",
+                "isDeleted"
+              ],
+              "properties": {
+                "userId": {
+                  "type": "String"
+                },
+                "userEmail": {
+                  "type": "String"
+                },
+                "title": {
+                  "type": "string"
+                },
+                "description": {
+                  "type": "string"
+                },
+                "color": {
+                  "type": "string"
+                },
+                "isArchived": {
+                  "type": "string"
+                },
+                "isDeleted": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          {
+            "in": "header",
+            "name": "token",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "token"
+              ],
+              "properties": {
+                "token": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "description": "Adding new note",
+        "produces": "application/json",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/notes/": {
+      "get": {
+        "tags": [
+          ""
+        ],
+        "summary": "get all notes.",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "token",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "token"
+              ],
+              "properties": {
+                "token": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "description": " get all note",
+        "produces": "application/json",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
 
-  "/forgetpassword": {
-    "post": {
-      "tags": [
-        ""
-      ],
-      "summary": "forget password",
-      "description": "to reset new password user need to forget password first",
-      "parameters": [
-        {
-          "in": "body",
-          "name": "Forget Password",
-          "required": false,
-          "schema": {
-            "$ref": "#/definitions/ForgetPassword"
-          }
-        }
-      ],
-      "produces": [
-        "application/json"
-      ],
-      "responses": {
-        "200": {
-          "description": "OK"
-        },
-        "500":{
-          "description":"Internal server error"
-        }
-      }
-    }
-  },
-  "/resetpassword": {
-    "put": {
-      "tags": [
-        ""
-      ],
-      "summary": "Reset a user.",
-      "parameters": [
-        {
-          "in": "body",
-          "name": "Reset Data",
-          "required": true,
-          "schema": {
-            "$ref": "#/definitions/ResetPassword"
-          }
-        },
-        {
-          "in": "header",
-          "name": "token",
-          "required": true,
-          "schema": {
-            "$ref": "#/definitions/ResetPassword"
-          }
-        }
-      ],
-      "description": "Reset password",
-      "produces": "application/json",
-      "responses": {
-        "200": {
-          "description": "OK"
-        }
-      }
-    }
-  },
-  "/addNote": {
-    "post": {
-      "tags": [
-        ""
-      ],
-      "summary": "Add a note.",
-      "parameters": [
-        {
-          "in": "body",
-          "name": "addNotes Data",
-          "required": true,
-          "schema": {
-            "type": "object",
-            "required": [
-              "userId",
-              "userEmail",
-              "title",
-              "description",
-              "color",
-              "isArchived",
-              "isDeleted"
-            ],
-            "properties": {
-              "userId":{
-                "type":"String"
-              },
-              "userEmail":{
-                "type":"String"
-              },
-              "title": {
-                "type": "string"
-              },
-              "description": {
-                "type": "string"
-              },
-              "color": {
-                "type": "string"
-              },
-              "isArchived": {
-                "type": "string"
-              },
-              "isDeleted": {
-                "type": "string"
+
+    "/notes/note:_id": {
+      "put": {
+        "tags": [
+          ""
+        ],
+        "summary": "Update a note.",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "updateNote Data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "type": "string"
+                },
+                "description": {
+                  "type": "string"
+                },
+                "color": {
+                  "type": "string"
+                },
+                "isArchived": {
+                  "type": "string"
+                },
+                "isDeleted": {
+                  "type": "string"
+                },
+                "_id": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          {
+            "in": "header",
+            "name": "token",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "token"
+              ],
+              "properties": {
+                "token": {
+                  "type": "string"
+                }
               }
             }
           }
-        },
-        {
-          "in": "header",
-          "name": "token",
-          "required": true,
-          "schema": {
-            "type": "object",
-            "required": [
-              "token"
-            ],
-            "properties": {
-              "token": {
-                "type": "string"
+        ],
+        "description": "Update a Note",
+        "produces": "application/json",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/isArchieved": {
+      "get": {
+        "tags": [
+          ""
+        ],
+        "summary": "get isArchieved notes",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "token",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "token"
+              ],
+              "properties": {
+                "token": {
+                  "type": "string"
+                }
               }
             }
           }
+        ],
+        "description": "Get isArchievedNote `object` back from the server.",
+        "produces": "application/json",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
         }
-      ],
-      "description": "Register a user and get registered user `object` back from the server.",
-      "produces": "application/json",
-      "responses": {
-        "200": {
-          "description": "OK"
+      }
+    },
+    "/isDeleted": {
+      "get": {
+        "tags": [
+          ""
+        ],
+        "summary": "Get is deleted Note",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "token",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "token"
+              ],
+              "properties": {
+                "token": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "description": "Get isDeleted notes.",
+        "produces": "application/json",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
         }
       }
     }
-  }
   },
   "definitions": {
     "UserRegistration": {
@@ -234,35 +394,32 @@
         }
       }
     },
-  "UserLogin": {
-    "properties": {
-      "email": {
-        "type": "string"
-      },
-      "password": {
-        "type": "string"
+    "UserLogin": {
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
       }
-    }
-  },
-  "ForgetPassword": {
-    "properties": {
-      "email": {
-        "type": "string"
+    },
+    "ForgetPassword": {
+      "properties": {
+        "email": {
+          "type": "string"
+        }
       }
-    }
-  },
-  "ResetPassword":{
-    "properties": {
-      "email": {
-        "type": "string"
-      },
-      "password": {
-        "type": "string"
+    },
+    "ResetPassword": {
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
       }
     }
   }
 }
-}
-  
-
-
